refactor: clean up user follow logic
