# apps/server/src/main/java/com/skkil/sync/user/dto/response/GetConnectionsResponse.java
@@ -1,11 +1,8 @@
 package com.skkil.sync.user.dto.response;
 
-import java.util.List;
+import com.skkil.sync.common.util.pagination.dto.response.CursorPaginationResponse;
 
-public record GetConnectionsResponse(List<Connection> connections) {
+public record GetConnectionsResponse(CursorPaginationResponse<Connection> connections) {
 
-  public static record Connection(
-      String userId, String name, Provider provider, String profession) {}
-
-  public static record Provider(String id, String type, String name) {}
+  public static record Connection(String userId, String handle, String name) {}
 }
